--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 <div class="col-md-6">
                     <div class="message-box">
                         <h4>About Us </h4> 
-                        <h1>Welcome to <span style="color:rgb(9, 9, 134)"> mark</span>  <span style="color:rgb(22, 200, 22)">GEO</span> TECHNOLOGIES </h1>
+                        <h1>Welcome to <span style="color:rgb(9, 9, 134)"> SPATIALMIND</span>  <span style="color:rgb(22, 200, 22)">GEO</span> TECHNOLOGIES </h1>
                         <p>Specializes in Photogrammetry/ LiDAR/ Automated Mapping /Facilities Management (AM/FM) and Geographic Information Systems (GIS) solutions, <span style="color:rgb(9, 9, 134)">S</span>GT has based its premises in Kakinada- India.</p>
                      
 
